<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        android:fontFamily="@font/exo"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/icon_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/icon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintBottom_toTopOf="@id/selection_text">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:contentDescription="@string/title_virus_one_desc"
            android:src="@drawable/virus_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_icons_text"
            android:fontFamily="@font/exo"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:src="@drawable/virus_blue2"
            android:contentDescription="@string/title_virus_two_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/selection_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_selection_text"
        android:textColor="@color/black"
        android:fontFamily="@font/exo"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/view_pager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_layout" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selection_text"
        app:layout_constraintBottom_toTopOf="@id/selection_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/selection_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/selection_button_text"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/button_color"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/view_pager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>